add renderInitialTasks func

--- a/index.html
+++ b/index.html
@@ -19,13 +19,7 @@
       </section>
       <section class="completed-section">
         <h2>Complete</h2>
-        <ul id="completed-list">
-          <li class="list-item" data-id="nek id">
-            <input type="checkbox" class="checkbox" />
-            <p>${task title}</p>
-            <p>${task description}</p>
-          </li>
-        </ul>
+        <ul id="completed-list"></ul>
       </section>
       <section class="add-task-section">
         <form id="add-task-form">
