--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <ul id="completed-list"></ul>
       </section>
       <section class="add-task-section">
-        <form id="add-task-form">
+        <form class="add-task-form" id="add-task-form">
           <label for="title">Title</label>
-          <input type="text" name="title" id="title" />
+          <input type="text" name="title" id="title" required />
 
           <label for="description">Description</label>
-          <input type="text" name="description" id="description" />
+          <input type="text" name="description" id="description" required />
 
           <input type="submit" value="Add Task" id="submit-button" />
         </form>
